# Spindash

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  SPINDASHConfig.cmake  Spindash.files  Spindash.includes
codeblocks/: kazphysics2.cbp
deprecated/: entity.cpp  entity.h  old_character_collision.txt
playground/: CMakeLists.txt  main.cpp
spindash/: CMakeLists.txt  box_object.cpp  box_object.h  character.cpp  character.h  object.cpp  object.h  spindash.cpp  spindash.h  spring.cpp  spring.h  typedefs.h  world.cpp  world.h
spindash/collision/: box.cpp  box.h  collide.cpp  collision_primitive.h  ray_box.cpp  ray_box.h  triangle.h
src/: CMakeLists.txt  character.cpp  character.h  entity.cpp  entity.h  kazphysics2.h  kp_private.h  main.c  object.cpp  object.h  spindash.h  spring.cpp  spring.h  typedefs.h  world.cpp  world.h
src/collision/: box.h  collide.cpp  collide.h  collision_primitive.cpp  collision_primitive.h  ray_box.cpp  ray_box.h  triangle.h
src/logging/: logging.cpp  logging.h
tests/: CMakeLists.txt  main.cpp  test_animations.h  test_camera.h  test_character_response.cpp  test_character_response.h  test_collisions.h  test_jumping.h  test_response.h  test_running.cpp  test_running.h  test_solid_tiles.cpp  test_solid_tiles.h
