CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Spindash)

FIND_PACKAGE(PkgConfig)

ADD_DEFINITIONS("-Wall -std=c++0x -g")

INCLUDE_DIRECTORIES(
    kazmath
)

ADD_SUBDIRECTORY(src)

PKG_CHECK_MODULES(UNITTEST REQUIRED unittest++)
INCLUDE_DIRECTORIES(
    src 
    ${UNITTEST_INCLUDE_DIRS}    
)

LINK_LIBRARIES(
    ${UNITTEST_LIBRARIES}
    spindash
)

ADD_SUBDIRECTORY(tests)
