CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Spindash)

FIND_PACKAGE(PkgConfig)

FIND_PACKAGE(KAZTEST)
FIND_PACKAGE(KGLT)
FIND_PACKAGE(KAZBASE REQUIRED)
FIND_PACKAGE(KAZMATH REQUIRED)
FIND_PACKAGE(KAZTIMER REQUIRED)

FIND_PACKAGE(Boost COMPONENTS thread chrono system date_time regex REQUIRED)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")

ADD_DEFINITIONS("-Wall -std=c++11 -g")

PKG_CHECK_MODULES(GL REQUIRED gl) #FIXME: SHouldn't depend on GL

INCLUDE_DIRECTORIES(
    ${KAZBASE_INCLUDE_DIRS}
    ${KAZMATH_INCLUDE_DIRS}
    ${KAZTIMER_INCLUDE_DIRS}
    ${Boost_INCLUDE_DIRS}
)
LINK_LIBRARIES(
    ${KAZBASE_LIBRARIES}
    ${KAZMATH_LIBRARIES}
    ${KAZTIMER_LIBRARIES}
    ${Boost_LIBRARIES}
)

ADD_SUBDIRECTORY(spindash)

IF(KAZTEST_FOUND)
    ADD_SUBDIRECTORY(tests)
ENDIF()

IF(KGLT_FOUND)
    ADD_SUBDIRECTORY(playground)
ENDIF()

INSTALL(FILES ${CMAKE_SOURCE_DIR}/SPINDASHConfig.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/share/spindash)
