
FILE(GLOB_RECURSE PLAYGROUND_FILES *.cpp)
FILE(GLOB_RECURSE KAZTIMER_FILES ../kaztimer/kaztimer/*.cpp)
FILE(GLOB_RECURSE KAZTEXT_FILES ../kaztext/kaztext/*.cpp)
FILE(GLOB_RECURSE LEAK_CHECKER_FILES ../nvwa/*.cpp)

pkg_check_modules(FREETYPE REQUIRED freetype2) 
PKG_CHECK_MODULES(SDL REQUIRED sdl) 
PKG_CHECK_MODULES(GLU REQUIRED glu) 

INCLUDE_DIRECTORIES(
    ${SDL_INCLUDE_DIRS}
    ${GLU_INCLUDE_DIRS}    
    ${FREETYPE_INCLUDE_DIRS}
)

LINK_LIBRARIES(
    ${SDL_LIBRARIES}
    ${GLU_LIBRARIES}   
    ${FREETYPE_LIBRARIES} 
)

ADD_EXECUTABLE(spindash_playground ${PLAYGROUND_FILES} ${KAZTIMER_FILES} ${KAZTEXT_FILES} ${LEAK_CHECKER_FILES})

