
FILE(GLOB_RECURSE PLAYGROUND_FILES *.cpp)

ADD_DEFINITIONS("-Wall -std=c++11 -g -DdSINGLE")

FIND_PACKAGE(PkgConfig)
FIND_PACKAGE(KGLT REQUIRED)
FIND_PACKAGE(KAZBASE REQUIRED)
FIND_PACKAGE(KAZMATH REQUIRED)
FIND_PACKAGE(KAZTIMER REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
PKG_CHECK_MODULES(SDL2 REQUIRED sdl2)
PKG_CHECK_MODULES(GL REQUIRED gl)
PKG_CHECK_MODULES(ODE REQUIRED ode)

INCLUDE_DIRECTORIES(
    ../
    ${SDL2_INCLUDE_DIRS}
    ${GL_INCLUDE_DIRS}
    ${KGLT_INCLUDE_DIRS}
    ${KAZMATH_INCLUDE_DIRS}
    ${KAZBASE_INCLUDE_DIRS}
    ${KAZTIMER_INCLUDE_DIRS}
    ${FREETYPE_INCLUDE_DIRS}
)

LINK_LIBRARIES(
    ${SDL2_LIBRARIES}
    ${GL_LIBRARIES}
    ${KGLT_LIBRARIES}
    ${KAZMATH_LIBRARIES}
    ${KAZBASE_LIBRARIES}
    ${KAZTIMER_LIBRARIES}
    ${FREETYPE_LIBRARY}
)


ADD_EXECUTABLE(spindash_playground 
    ${PLAYGROUND_FILES}
)

target_link_libraries(spindash_playground spindash)


