
FILE(GLOB_RECURSE SPINDASH_FILES *.cpp)

ADD_LIBRARY(spindash SHARED ${SPINDASH_FILES})
INSTALL(TARGETS spindash DESTINATION lib)
#INSTALL(DIRECTORY ./ DESTINATION include/spindash FILES_MATCHING PATTERN *.h)
INSTALL(DIRECTORY ./ DESTINATION include/spindash FILES_MATCHING PATTERN spindash.h PATTERN "typedefs.h" PATTERN "collision" EXCLUDE)
