
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

FILE(GLOB_RECURSE TEST_FILES *.h)

ADD_CUSTOM_COMMAND(
    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
    COMMAND ${KAZTEST_EXECUTABLE} ${TEST_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
    DEPENDS ${TEST_FILES}
)



ADD_EXECUTABLE(spindash_tests ${TEST_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
TARGET_LINK_LIBRARIES(spindash_tests spindash)

ADD_TEST(suite spindash_tests)


